# nlp-notebooks

./: AG_NEWS_XLNet.ipynb  IMDB_BERT.ipynb  IMDB_BERT.py  README.md  char_rnn_classification_tutorial.ipynb  char_rnn_generation_tutorial_simplified.ipynb  gpt.ipynb  gpt.py  hello.py  output.txt  pyproject.toml  t.ipynb  t.json
