[project]
name = "xlnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "importlib-metadata>=8.5.0",
    "ipykernel>=6.29.5",
    "portalocker>=2.10.1",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.5.2",
    "sentencepiece>=0.2.0",
    "torch==2.3.0",
    "torchdata>=0.9.0",
    "torchinfo>=1.8.0",
    "torchtext>=0.18.0",
    "transformers>=4.46.2",
]
